...
class DiscoverViewController: UIViewController, ViewModelDelegate {
    func reloadData() {
        postsCollectionView.reloadData()
    }
    

    @IBOutlet weak var postsCollectionView: UICollectionView!
    @IBOutlet weak var postsGeneral: UIView!
    @IBOutlet weak var postAddedBtn: UIButton!
    @IBOutlet weak var profilAvatar: UIImageView!
    @IBOutlet weak var activePoll: UILabel!
    @IBOutlet weak var seeDetails: UILabel!
    @IBOutlet weak var seeDetailsBtn: UIButton!
...
