...
        imageView.subviews.forEach { $0.removeFromSuperview() }
        if !isLiked{
            let buttonSize: CGFloat = 30
           
            let xOffset: CGFloat = 10 // Adjust as needed
            let yOffset: CGFloat = 60 /// Yuvarlak butonun genişliği ve yüksekliği
            let likeButton = UIButton(type: .custom)
            likeButton.setImage(UIImage(resource: .default), for: .normal)
            likeButton.frame = CGRect(x: xOffset, y: imageView.frame.height - buttonSize + 70, width: buttonSize, height: buttonSize)
            likeButton.layer.cornerRadius = buttonSize / 2
            likeButton.clipsToBounds = true
            likeButton.tintColor = .red
            likeButton.addTarget(self, action: #selector(likeButtonTapped(_:)), for: .touchUpInside)
...
